tests/operator/add_null_null.rev
null + null // error: uninitialized variable